--- a/www/css/app.css
+++ b/www/css/app.css
@@ -78,3 +78,13 @@
     padding:5px 15px;
 }
 
+.demo-card-header-pic .card-header {
+  height: 40vw;
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+}
+.demo-card-header-pic .card-content-padding .date{
+  color: #8e8e93;
+}
+
